@@ -1,5 +1,8 @@
 #import <Foundation/NSString.h>
 
+//
+// CFLocale keys
+//
 const NSString *kCFLocaleMeasurementSystem =
   @"kCFLocaleMeasurementSystem";
 const NSString *kCFLocaleDecimalSeparator =
@@ -41,6 +44,11 @@ const NSString *kCFLocaleAlternateQuotationBeginDelimiterKey =
 const NSString *kCFLocaleAlternateQuotationEndDelimiterKey =
   @"kCFLocaleAlternateQuotationEndDelimiterKey";
 
+
+
+//
+// CFCalendar identifiers
+//
 const NSString *kCFGregorianCalendar = @"gregorian";
 const NSString *kCFBuddhistCalendar = @"buddhist";
 const NSString *kCFChineseCalendar = @"chinese";
@@ -52,3 +60,85 @@ const NSString *kCFRepublicOfChinaCalendar = @"roc";
 const NSString *kCFPersianCalendar = @"persian";
 const NSString *kCFIndianCalendar = @"indian";
 const NSString *kCFISO8601Calendar = @"";
+
+
+
+//
+// CFNumberFormatter keys
+//
+const NSString *kCFNumberFormatterCurrencyCode = 
+  @"kCFNumberFormatterCurrencyCode";
+const NSString *kCFNumberFormatterDecimalSeparator = 
+  @"kCFNumberFormatterDecimalSeparator";
+const NSString *kCFNumberFormatterCurrencyDecimalSeparator = 
+  @"kCFNumberFormatterCurrencyDecimalSeparator";
+const NSString *kCFNumberFormatterAlwaysShowDecimalSeparator = 
+  @"kCFNumberFormatterAlwaysShowDecimalSeparator";
+const NSString *kCFNumberFormatterGroupingSeparator = 
+  @"kCFNumberFormatterGroupingSeparator";
+const NSString *kCFNumberFormatterUseGroupingSeparator = 
+  @"kCFNumberFormatterUseGroupingSeparator";
+const NSString *kCFNumberFormatterPercentSymbol = 
+  @"kCFNumberFormatterPercentSymbol";
+const NSString *kCFNumberFormatterZeroSymbol = 
+  @"kCFNumberFormatterZeroSymbol";
+const NSString *kCFNumberFormatterNaNSymbol = 
+  @"kCFNumberFormatterNaNSymbol";
+const NSString *kCFNumberFormatterInfinitySymbol = 
+  @"kCFNumberFormatterInfinitySymbol";
+const NSString *kCFNumberFormatterMinusSign = 
+  @"kCFNumberFormatterMinusSign";
+const NSString *kCFNumberFormatterPlusSign = 
+  @"kCFNumberFormatterPlusSign";
+const NSString *kCFNumberFormatterCurrencySymbol = 
+  @"kCFNumberFormatterCurrencySymbol";
+const NSString *kCFNumberFormatterExponentSymbol = 
+  @"kCFNumberFormatterExponentSymbol";
+const NSString *kCFNumberFormatterMinIntegerDigits = 
+  @"kCFNumberFormatterMinIntegerDigits";
+const NSString *kCFNumberFormatterMaxIntegerDigits = 
+  @"kCFNumberFormatterMaxIntegerDigits";
+const NSString *kCFNumberFormatterMinFractionDigits = 
+  @"kCFNumberFormatterMinFractionDigits";
+const NSString *kCFNumberFormatterMaxFractionDigits = 
+  @"kCFNumberFormatterMaxFractionDigits";
+const NSString *kCFNumberFormatterGroupingSize = 
+  @"kCFNumberFormatterGroupingSize";
+const NSString *kCFNumberFormatterSecondaryGroupingSize = 
+  @"kCFNumberFormatterSecondaryGroupingSize";
+const NSString *kCFNumberFormatterRoundingMode = 
+  @"kCFNumberFormatterRoundingMode";
+const NSString *kCFNumberFormatterRoundingIncrement = 
+  @"kCFNumberFormatterRoundingIncrement";
+const NSString *kCFNumberFormatterFormatWidth = 
+  @"kCFNumberFormatterFormatWidth";
+const NSString *kCFNumberFormatterPaddingPosition = 
+  @"kCFNumberFormatterPaddingPosition";
+const NSString *kCFNumberFormatterPaddingCharacter = 
+  @"kCFNumberFormatterPaddingCharacter";
+const NSString *kCFNumberFormatterDefaultFormat = 
+  @"kCFNumberFormatterDefaultFormat";
+const NSString *kCFNumberFormatterMultiplier = 
+  @"kCFNumberFormatterMultiplier";
+const NSString *kCFNumberFormatterPositivePrefix = 
+  @"kCFNumberFormatterPositivePrefix";
+const NSString *kCFNumberFormatterPositiveSuffix = 
+  @"kCFNumberFormatterPositiveSuffix";
+const NSString *kCFNumberFormatterNegativePrefix = 
+  @"kCFNumberFormatterNegativePrefix";
+const NSString *kCFNumberFormatterNegativeSuffix = 
+  @"kCFNumberFormatterNegativeSuffix";
+const NSString *kCFNumberFormatterPerMillSymbol = 
+  @"kCFNumberFormatterPerMillSymbol";
+const NSString *kCFNumberFormatterInternationalCurrencySymbol = 
+  @"kCFNumberFormatterInternationalCurrencySymbol"; 
+const NSString *kCFNumberFormatterCurrencyGroupingSeparator = 
+  @"kCFNumberFormatterCurrencyGroupingSeparator";
+const NSString *kCFNumberFormatterIsLenient = 
+  @"kCFNumberFormatterIsLenient";
+const NSString *kCFNumberFormatterUseSignificantDigits = 
+  @"kCFNumberFormatterUseSignificantDigits";
+const NSString *kCFNumberFormatterMinSignificantDigits = 
+  @"kCFNumberFormatterMinSignificantDigits";
+const NSString *kCFNumberFormatterMaxSignificantDigits =
+  @"kCFNumberFormatterMaxSignificantDigits";
